--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,7 +14,7 @@
                         </span>
                     </a>
                     <ul class="dropdown-menu m-t-xs">
-                        <li><%= link_to fa_icon('sign-out', text: 'Log out'), destroy_user_session_path, method: :delete %></li>
+                        <li><%= link_to fa_icon('sign-out', text: t('buttons.sign_out')), destroy_user_session_path, method: :delete %></li>
                     </ul>
                 </div>
                 <div class="logo-element">
