--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -47,10 +47,10 @@
                 <div class="col-lg-7">
                     <dl class="dl-horizontal">
 
-                        <dt><%= t('activerecord.attributes.product.product_type') %>:</dt>
-                        <dd><%= @product.product_type %></dd>
-                        <dt><%= t('activerecord.attributes.product.product_dev_type') %>:</dt>
-                        <dd> <%= @product.product_dev_type %></dd>
+                        <dt><%= t('activerecord.attributes.product.category') %>:</dt>
+                        <dd><%= @product.category %></dd>
+                        <dt><%= t('activerecord.attributes.product.rd_category') %>:</dt>
+                        <dd> <%= @product.rd_category %></dd>
                         <dt><%= t('activerecord.attributes.product.initial_fund') %>:</dt>
                         <dd> <%= @product.initial_fund %></dd>
                     </dl>
