--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -18,6 +18,7 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
+                    <%= t('labels.all_required') %>
                     <div class="ibox-tools">
 
                     </div>
