--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -59,6 +59,7 @@
     <%= f.input :is_structured, as: :radio_buttons %>
     </div>
     <div class="col-lg-6">
+    <%= f.input :leverage %>
     <%= f.input :superior_code %>
     <%= f.input :inferior_code %>
     </div>
