--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -67,6 +67,17 @@
 
 <div class="hr-line-dashed"></div>
 
+<div class="row">
+    <div class="col-lg-6">
+      <%= f.input :deposited_at, as: :date_picker %>
+    </div>
+    <div class="col-lg-6">
+      <%= f.input :put_on_record_at, as: :date_picker %>
+    </div>
+</div>
+
+<div class="hr-line-dashed"></div>
+
   <div class="form-group">
       <div class="pull-right m-r-md">
           <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
