--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,6 +3,10 @@
 
 <div class="row">
     <div class="col-lg-6">
+      <%= f.simple_fields_for :staff do |pm| %>
+        <%= pm.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.staff') %>
+        <%= pm.input :id, as: :hidden %>
+      <% end %>
         <%= f.input :name, input_html: {autocomplete: 'off'} %>
         <%= f.input :short_name, input_html: {autocomplete: 'off'} %>
         <%= f.input :code, input_html: {autocomplete: 'off'} %>
@@ -10,12 +14,9 @@
         <%= f.input :initial_fund, input_html: {autocomplete: 'off'} %>
     </div>
     <div class="col-lg-6">
-        <%= f.simple_fields_for :staff do |pm| %>
-          <%= pm.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.staff') %>
-          <%= pm.input :id, as: :hidden %>
-        <% end %>
         <%= f.input :category, collection: Product.categories, as: :radio_buttons %>
         <%= f.input :rd_category, collection: Product.rd_categories, as: :radio_buttons %>
+        <%= f.input :status, collection: Product.statuses, as: :radio_buttons %>
     </div>
 </div>
 
