add liquidated at

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -17,6 +17,7 @@
         <%= f.input :category, collection: Product.categories, as: :radio_buttons %>
         <%= f.input :rd_category, collection: Product.rd_categories, as: :radio_buttons %>
         <%= f.input :status, collection: Product.statuses, as: :radio_buttons %>
+        <%= f.input :liquidated_at, as: :date_picker %>
     </div>
 </div>
 
