--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,16 +24,27 @@
 
                         <h2><%= @product.name %></h2>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
                     <dl class="dl-horizontal">
                         <dt><%= t('activerecord.attributes.product.status') %>:</dt>
                         <dd><span class="<%= product_status_label_class(@product) %>"><%= Product.status_names[@product.status] %></span></dd>
+                    </dl>
+                </div>
+                <div class="col-lg-7">
+                    <dl class="dl-horizontal">
+                        <% if @product.is_liquidated? %>
+                        <dt><%= t('activerecord.attributes.product.liquidated_at') %>:</dt>
+                        <dd><%= @product.liquidated_at.strftime('%Y-%m-%d') if @product.liquidated_at %></span></dd>
+                        <% end %>
                     </dl>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-5">
                     <dl class="dl-horizontal">
-
                         <dt><%= t('activerecord.attributes.product.staff') %>:</dt>
                         <dd><%= @product.staff.name if @product.staff %> </dd>
                         <dt><%= t('activerecord.attributes.product.name') %>:</dt>
