--- a/app/views/products/_show_tab_accounts.html.erb
+++ b/app/views/products/_show_tab_accounts.html.erb
@@ -2,34 +2,46 @@
     <div class="col-lg-12">
         <div class="m-b-md">
             <div class="">
-                <%= link_to fa_icon('pencil', text: '修改交易账号信息'), nil, class: 'btn btn-white btn-sm' %>
+                <%= link_to fa_icon('pencil', text: '修改交易账号信息'), edit_product_path(@product, tab: @current_tab), class: 'btn btn-white btn-sm' %>
             </div>
         </div>
     </div>
 </div>
+
 <div class="row">
     <div class="col-lg-5">
         <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.szse_gateway') %>:</dt>
+            <dd><%= @product.szse_gateway %></dd>
+        </dl>
+    </div>
+    <div class="col-lg-7">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.dce_gateway') %>:</dt>
+            <dd><%= @product.dce_gateway %> </dd>
+        </dl>
+    </div>
+</div>
 
+<div class="row">
+    <div class="col-lg-5">
+        <dl class="dl-horizontal">
             <dt><%= t('activerecord.attributes.product.sse_account_code') %>:</dt>
             <dd><%= @product.sse_account_code %></dd>
             <dt><%= t('activerecord.attributes.product.szse_account_code') %>:</dt>
             <dd><%= @product.szse_account_code %></dd>
             <dt><%= t('activerecord.attributes.product.cffex_account_code') %>:</dt>
             <dd><%= @product.cffex_account_code %></dd>
-
         </dl>
     </div>
     <div class="col-lg-7">
         <dl class="dl-horizontal">
-
-          <dt><%= t('activerecord.attributes.product.zce_account_code') %>:</dt>
-          <dd><%= @product.zce_account_code %> </dd>
-          <dt><%= t('activerecord.attributes.product.dce_account_code') %>:</dt>
-          <dd><%= @product.dce_account_code %> </dd>
-          <dt><%= t('activerecord.attributes.product.shfe_account_code') %>:</dt>
-          <dd><%= @product.shfe_account_code %> </dd>
-
+            <dt><%= t('activerecord.attributes.product.zce_account_code') %>:</dt>
+            <dd><%= @product.zce_account_code %> </dd>
+            <dt><%= t('activerecord.attributes.product.dce_account_code') %>:</dt>
+            <dd><%= @product.dce_account_code %> </dd>
+            <dt><%= t('activerecord.attributes.product.shfe_account_code') %>:</dt>
+            <dd><%= @product.shfe_account_code %> </dd>
         </dl>
     </div>
 </div>
