--- a/app/views/products/_show_tab_summary.html.erb
+++ b/app/views/products/_show_tab_summary.html.erb
@@ -2,7 +2,7 @@
     <div class="col-lg-12">
         <div class="m-b-md">
             <div class="">
-
+                
             </div>
         </div>
     </div>
@@ -33,6 +33,8 @@
     </div>
 </div>
 
+<div class="hr-line-dashed"></div>
+
 <div class="row">
     <div class="col-lg-5">
         <dl class="dl-horizontal">
@@ -51,6 +53,35 @@
         </dl>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-lg-5">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.trustor_name') %>:</dt>
+            <dd><%= @product.trustor_name %></dd>
+            <dt><%= t('activerecord.attributes.product.trustor_bank_name') %>:</dt>
+            <dd><%= @product.trustor_bank_name %></dd>
+            <dt><%= t('activerecord.attributes.product.trustor_bank_account_name') %>:</dt>
+            <dd><%= @product.trustor_bank_account_name %> </dd>
+            <dt><%= t('activerecord.attributes.product.trustor_bank_account_number') %>:</dt>
+            <dd><%= @product.trustor_bank_account_number %> </dd>
+        </dl>
+    </div>
+    <div class="col-lg-7">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.securities_broker_account_name') %>:</dt>
+            <dd><%= @product.securities_broker_name %></dd>
+            <dt><%= t('activerecord.attributes.product.securities_broker_name') %>:</dt>
+            <dd><%= @product.securities_broker_account_name %></dd>
+            <dt><%= t('activerecord.attributes.product.securities_broker_account_number') %>:</dt>
+            <dd><%= @product.securities_broker_account_number %> </dd>
+            <dt><%= t('activerecord.attributes.product.valuation_out_sourcing') %>:</dt>
+            <dd><%= @product.valuation_out_sourcing %> </dd>
+        </dl>
+    </div>
+</div>
+
+<div class="hr-line-dashed"></div>
 
 <div class="row">
     <div class="col-lg-5">
@@ -75,33 +106,73 @@
     </div>
 </div>
 
+<div class="hr-line-dashed"></div>
+
 <div class="row">
     <div class="col-lg-5">
         <dl class="dl-horizontal">
-
-            <dt><%= t('activerecord.attributes.product.trustor_name') %>:</dt>
-            <dd><%= @product.trustor_bank_account.trustor.name if @product.trustor_bank_account %></dd>
-            <dt><%= t('activerecord.attributes.product.trustor_bank_name') %>:</dt>
-            <dd><%= @product.trustor_bank_account.bank.name if @product.trustor_bank_account %></dd>
-            <dt><%= t('activerecord.attributes.product.trustor_bank_account_name') %>:</dt>
-            <dd><%= @product.trustor_bank_account.name if @product.trustor_bank_account %> </dd>
-            <dt><%= t('activerecord.attributes.product.trustor_bank_account_number') %>:</dt>
-            <dd><%= @product.trustor_bank_account.number if @product.trustor_bank_account %> </dd>
-
+            <dt><%= t('activerecord.attributes.product.trustor_fee_ratio') %>:</dt>
+            <dd><%= @product.trustor_fee_ratio %></dd>
+            <dt><%= t('activerecord.attributes.product.operation_fee_ratio') %>:</dt>
+            <dd><%= @product.operation_fee_ratio %></dd>
+            <dt><%= t('activerecord.attributes.product.bonus') %>:</dt>
+            <dd><%= @product.bonus %></dd>
+            <dt><%= t('activerecord.attributes.product.sales_fee_ratio') %>:</dt>
+            <dd><%= @product.sales_fee_ratio %></dd>
         </dl>
     </div>
     <div class="col-lg-7">
         <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.year_day_count') %>:</dt>
+            <dd><%= @product.year_day_count %></dd>
+            <dt><%= t('activerecord.attributes.product.management_fee_ratio') %>:</dt>
+            <dd><%= @product.management_fee_ratio %> </dd>
+            <dt><%= t('activerecord.attributes.product.management_fee_flour') %>:</dt>
+            <dd><%= @product.management_fee_flour %> </dd>
+            <dt><%= t('activerecord.attributes.product.consultant_fee_ratio') %>:</dt>
+            <dd><%= @product.consultant_fee_ratio %> </dd>
+            <dt><%= t('activerecord.attributes.product.consultant_fee_flour') %>:</dt>
+            <dd><%= @product.consultant_fee_flour %> </dd>
+        </dl>
+    </div>
+</div>
 
-            <dt><%= t('activerecord.attributes.product.securities_broker_account_name') %>:</dt>
-            <dd><%= @product.securities_broker_account.name if @product.securities_broker_account %></dd>
-            <dt><%= t('activerecord.attributes.product.securities_broker_name') %>:</dt>
-            <dd><%= @product.securities_broker_account.securities_broker.name if @product.securities_broker_account %></dd>
-            <dt><%= t('activerecord.attributes.product.securities_broker_account_number') %>:</dt>
-            <dd><%= @product.securities_broker_account.number if @product.securities_broker_account %> </dd>
-            <dt><%= t('activerecord.attributes.product.valuation_out_sourcing') %>:</dt>
-            <dd><%= @product.valuation_out_sourcing %> </dd>
+<div class="hr-line-dashed"></div>
 
+<div class="row">
+    <div class="col-lg-5">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.szse_gateway') %>:</dt>
+            <dd><%= @product.szse_gateway %></dd>
+        </dl>
+    </div>
+    <div class="col-lg-7">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.dce_gateway') %>:</dt>
+            <dd><%= @product.dce_gateway %> </dd>
+        </dl>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-5">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.sse_account_code') %>:</dt>
+            <dd><%= @product.sse_account_code %></dd>
+            <dt><%= t('activerecord.attributes.product.szse_account_code') %>:</dt>
+            <dd><%= @product.szse_account_code %></dd>
+            <dt><%= t('activerecord.attributes.product.cffex_account_code') %>:</dt>
+            <dd><%= @product.cffex_account_code %></dd>
+        </dl>
+    </div>
+    <div class="col-lg-7">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.zce_account_code') %>:</dt>
+            <dd><%= @product.zce_account_code %> </dd>
+            <dt><%= t('activerecord.attributes.product.dce_account_code') %>:</dt>
+            <dd><%= @product.dce_account_code %> </dd>
+            <dt><%= t('activerecord.attributes.product.shfe_account_code') %>:</dt>
+            <dd><%= @product.shfe_account_code %> </dd>
         </dl>
     </div>
 </div>
