--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,9 +19,8 @@
                 <div class="col-lg-12">
                     <div class="m-b-md">
                         <div class="pull-right">
-                          <%= link_to fa_icon('pencil', text: t('buttons.edit')), edit_product_path(@product), class: 'btn btn-white btn-sm' %>
+                            <%= link_to fa_icon('pencil', text: '编辑基本信息'), edit_product_path(@product), class: 'btn btn-white btn-sm' %>
                         </div>
-
                         <h2><%= @product.name %></h2>
                     </div>
                 </div>
@@ -42,7 +41,7 @@
                     </dl>
                 </div>
             </div>
-            
+
             <div class="row m-t-sm">
                 <div class="col-lg-12">
                     <div class="panel blank-panel">
