--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -16,8 +16,7 @@
 <div class="wrapper wrapper-content">
     <div class="row">
         <div class="col-lg-12 m-b-md">
-            <%= link_to '个人开户', new_client_path(individual: true), class: 'btn btn-primary btn-w-m' %>
-            <%= link_to '机构开户', new_client_path(institution: true), class: 'btn btn-primary btn-w-m' %>
+            <%= link_to '开户', new_client_path, class: 'btn btn-primary btn-w-m' %>
         </div>
     </div>
     <div class="row">
