--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -16,29 +16,18 @@
 </div>
 
 <div class="wrapper wrapper-content">
-    <div class="row m-b-lg">
+    <div class="row">
         <div class="col-lg-12">
-            <div class="tabs-container">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#tab-1"> 投资人基本信息（所有项目必填）</a></li>
-                    <li class=""><a data-toggle="tab" href="#tab-2">This is second tab</a></li>
-                </ul>
-                <div class="tab-content">
-                    <div id="tab-1" class="tab-pane active">
-                        <div class="panel-body">
-                            <%= render 'form' %>
-                        </div>
-                    </div>
-                    <div id="tab-2" class="tab-pane">
-                        <div class="panel-body">
-                            <%= render 'form' %>
-                        </div>
+            <div class="ibox">
+                <div class="ibox-title">
+                    <%= t('labels.all_required') %>
+                    <div class="ibox-tools">
                     </div>
                 </div>
-
-
+                <div class="ibox-content">
+                  <%= render 'form' %>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<p></p>
