--- a/app/views/products/_show_tab_clients.html.erb
+++ b/app/views/products/_show_tab_clients.html.erb
@@ -2,10 +2,10 @@
     <div class="col-lg-12">
         <div class="m-b-md">
             <div class="">
-                <%= link_to fa_icon('plus', text: '添加投资人'), nil, class: 'btn btn-white btn-sm' %>
+                <%= link_to fa_icon('plus', text: '添加投资人'), new_product_share_path(product_id: @product.id), class: 'btn btn-white btn-sm' %>
             </div>
         </div>
     </div>
 </div>
 
-<%= render 'clients_grid' %>
+<%= render 'product_shares/product_shares_grid', product: true %>
