--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -26,54 +26,8 @@
                         <h2>投资人 <%= @client.name %></h2>
                     </div>
                     <dl class="dl-horizontal">
-                        <dt><%= t('activerecord.attributes.client.type') %>:</dt>
-                        <dd><span class="label label-primary"><%= @client.is_a?(IndividualClient) ? t('individual_institution.individual') : t('individual_institution.institution') %></span></dd>
-                    </dl>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-5">
-                    <dl class="dl-horizontal">
-
-                        <dt><%= t('activerecord.attributes.client.application_number') %>:</dt>
-                        <dd><%= @client.application_number %></dd>
-                        <dt><%= t('activerecord.attributes.client.id_number_type') %>:</dt>
-                        <dd><%= Client.id_number_type_names[@client.id_number_type] %></dd>
-                        <dt><%= t('activerecord.attributes.client.id_number') %>:</dt>
-                        <dd><%= @client.id_number %> </dd>
-                        <dt><%= t('activerecord.attributes.client.sales_man_code') %>:</dt>
-                        <dd> <%= @client.sales_man_code %></dd>
-                    </dl>
-                </div>
-                <div class="col-lg-7">
-                    <dl class="dl-horizontal">
-
-                        <dt><%= t('activerecord.attributes.client.traded_at') %>:</dt>
-                        <dd><%= @client.traded_at.strftime('%Y-%m-%d %H:%M:%S') if @client.traded_at %></dd>
-                        <dt><%= t('activerecord.attributes.client.fund_trading_account_number') %>:</dt>
-                        <dd> <%= @client.fund_trading_account_number %></dd>
-                        <dt><%= t('activerecord.attributes.client.fund_account_number') %>:</dt>
-                        <dd> <%= @client.fund_account_number %></dd>
-                    </dl>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-5">
-                    <dl class="dl-horizontal">
-
-                        <dt><%= t('activerecord.attributes.client.person_in_charge_name') %>:</dt>
-                        <dd><%= @client.person_in_charge_name %></dd>
-                        <dt><%= t('activerecord.attributes.client.person_in_charge_id_number_type') %>:</dt>
-                        <dd><%= Client.id_number_type_names[@client.person_in_charge_id_number_type] %></dd>
-                        <dt><%= t('activerecord.attributes.client.person_in_charge_id_number') %>:</dt>
-                        <dd><%= @client.person_in_charge_id_number %> </dd>
-                    </dl>
-                </div>
-                <div class="col-lg-7">
-                    <dl class="dl-horizontal">
-
-
+                        <dt><%= t('activerecord.attributes.client.category') %>:</dt>
+                        <dd><span class="label label-success"><%= @client.individual? ? t('individual_institution.individual') : t('individual_institution.institution') %></span></dd>
                     </dl>
                 </div>
             </div>
@@ -84,8 +38,15 @@
                         <div class="panel-heading">
                             <div class="panel-options">
                                 <ul class="nav nav-tabs">
-                                    <li class="active"><a href="#tab-1" data-toggle="tab">投资人其他信息</a></li>
-                                    <li class=""><a href="#tab-2" data-toggle="tab">最近操作</a></li>
+                                    <% @tabs.each do |tab| %>
+                                    <% if @current_tab == tab %>
+                                    <li class="active">
+                                    <% else %>
+                                    <li class="">
+                                    <% end %>
+                                      <%= link_to t("activerecord.attributes.client.tabs.#{tab}"), client_path(@client, tab: tab) %>
+                                    </li>
+                                    <% end %>
                                 </ul>
                             </div>
                         </div>
@@ -93,15 +54,22 @@
                         <div class="panel-body">
 
                             <div class="tab-content">
-                                <div class="tab-pane active" id="tab-1">
+                                <% @tabs.each do |tab| %>
+                                <% if @current_tab == tab %>
+                                <div class="tab-pane active">
+                                <% else %>
+                                <div class="tab-pane">
+                                <% end %>
+                                    <%= render "show_tab_#{tab}" if tab == @current_tab %>
                                 </div>
-                                <div class="tab-pane" id="tab-2">
-                                </div>
+                                <% end %>
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
