--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,21 +16,19 @@
 <div class="wrapper wrapper-content">
     <div class="row">
         <div class="col-lg-12 m-b-md">
-            <%= link_to t('activerecord.text.new_instance', model: Product.model_name.human), new_product_path, class: 'btn btn-primary btn-w-m', method: :get %>
+              <%= link_to fa_icon('plus', text: t('activerecord.text.new_instance', model: Product.model_name.human)), new_product_path, class: 'btn btn-primary btn-w-m', method: :get %>
+              <%= link_to fa_icon('upload', text: t('从 Excel 批量导入')), import_products_path, class: 'btn btn-white', method: :get %>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-10">
             <div class="ibox">
                 <div class="ibox-content">
-
                     <div class="table-responsive">
                         <%= render partial: 'products_grid' %>
+                        <%= link_to(fa_icon('file-excel-o', text: t('buttons.download_as_excel')), products_path(@query_params.merge(format: :xls)), class: 'btn btn-white') if @products_grid.count > 0 %>
                     </div>
-
-                    <%= link_to(fa_icon('file-excel-o', text: t('buttons.download_as_excel')), products_path(@query_params.merge(format: :xls)), class: 'btn btn-w-m btn-white btn-sm') if @products_grid.count > 0 %>
                 </div>
-
             </div>
         </div>
         <div class="col-lg-2">
