--- a/app/views/products/import_from_excel.html.erb
+++ b/app/views/products/import_from_excel.html.erb
@@ -25,25 +25,9 @@
                     </div>
                 </div>
                 <div class="ibox-content">
-                    <%= simple_form_for(@product, html: { class: 'form-horizontal' }) do |f| %>
-                      <%= f.error_notification %>
-
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <%= f.input :name, input_html: {autocomplete: 'off'} %>
-                            <%= f.input :short_name, input_html: {autocomplete: 'off'} %>
-                            <%= f.input :code, input_html: {autocomplete: 'off'} %>
-                            <%= f.input :client_code, input_html: {autocomplete: 'off'} %>
-                            <%= f.input :initial_fund, input_html: {autocomplete: 'off'} %>
-                        </div>
-                        <div class="col-lg-6">
-                            <%= f.input :category, collection: Product.categories, as: :radio_buttons %>
-                            <%= f.input :rd_category, collection: Product.rd_categories, as: :radio_buttons %>
-                            <%= f.input :status, collection: Product.statuses, as: :radio_buttons %>
-                            <%= f.input :liquidated_at, as: :date_picker %>
-                        </div>
-                    </div>
-
+                    <%= simple_form_for(@product_import_excel_file, url: import_products_path, html: { class: 'form-horizontal' }) do |f| %>
+                    <%= f.error_notification %>
+                    <%= f.input :file, as: :file, input_html: {autocomplete: 'off'} %>
                     <div class="hr-line-dashed"></div>
 
                     <div class="form-group">
