--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,6 +12,7 @@
         <%= f.input :code, input_html: {autocomplete: 'off'} %>
         <%= f.input :client_code, input_html: {autocomplete: 'off'} %>
         <%= f.input :initial_fund, input_html: {autocomplete: 'off'} %>
+        <%= f.input :investment_scope, input_html: {autocomplete: 'off'}%>
     </div>
     <div class="col-lg-6">
         <%= f.input :category, collection: Product.categories, as: :radio_buttons %>
@@ -52,6 +53,7 @@
 <div class="row">
     <div class="col-lg-6">
         <%= f.input :delegation_started_at, as: :date_picker %>
+        <%= f.input :contract_profit_ratio %>
         <%= f.input :trustor_name, input_html: {autocomplete: 'off'} %>
         <%= f.input :trustor_bank_name, input_html: {autocomplete: 'off'} %>
         <%= f.input :trustor_bank_account_name, input_html: {autocomplete: 'off'} %>
@@ -60,6 +62,7 @@
     <div class="col-lg-6">
         <%= f.input :delegation_ended_at, as: :date_picker %>
         <%= f.input :delegation_duration %>
+        <%= f.input :spec_profit_ratio %>
         <%= f.input :securities_broker_name, input_html: {autocomplete: 'off'} %>
         <%= f.input :securities_broker_account_name, input_html: {autocomplete: 'off'} %>
         <%= f.input :securities_broker_account_number, input_html: {autocomplete: 'off'} %>
@@ -137,7 +140,7 @@
         <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
     </div>
     <div class="m-l-md">
-      <%= link_to t('buttons.back'), product_path(@product), class: 'btn btn-white' %>
+      <%= link_to t('buttons.back'), products_path, class: 'btn btn-white' %>
     </div>
 </div>
 <% end %>
