--- a/app/views/products/_show_tab_summary.html.erb
+++ b/app/views/products/_show_tab_summary.html.erb
@@ -2,7 +2,7 @@
     <div class="col-lg-12">
         <div class="m-b-md">
             <div class="">
-                
+
             </div>
         </div>
     </div>
@@ -29,6 +29,8 @@
             <dd> <%= @product.rd_category %></dd>
             <dt><%= t('activerecord.attributes.product.initial_fund') %>:</dt>
             <dd> <%= @product.initial_fund %></dd>
+            <dt><%= t('activerecord.attributes.product.investment_scope') %>:</dt>
+            <dd> <%= @product.investment_scope %></dd>
         </dl>
     </div>
 </div>
@@ -38,18 +40,20 @@
 <div class="row">
     <div class="col-lg-5">
         <dl class="dl-horizontal">
-
             <dt><%= t('activerecord.attributes.product.delegation_started_at') %>:</dt>
             <dd><%= @product.delegation_started_at.strftime('%Y-%m-%d') if @product.delegation_started_at %></dd>
             <dt><%= t('activerecord.attributes.product.delegation_ended_at') %>:</dt>
             <dd><%= @product.delegation_ended_at.strftime('%Y-%m-%d') if @product.delegation_ended_at %></dd>
-
+            <dt><%= t('activerecord.attributes.product.delegation_duration') %>:</dt>
+            <dd><%= @product.delegation_duration %> </dd>
         </dl>
     </div>
     <div class="col-lg-7">
         <dl class="dl-horizontal">
-            <dt><%= t('activerecord.attributes.product.delegation_duration') %>:</dt>
-            <dd><%= @product.delegation_duration %> </dd>
+            <dt><%= t('activerecord.attributes.product.contract_profit_ratio') %>:</dt>
+            <dd><%= @product.contract_profit_ratio %> </dd>
+            <dt><%= t('activerecord.attributes.product.spec_profit_ratio') %>:</dt>
+            <dd><%= @product.spec_profit_ratio %> </dd>
         </dl>
     </div>
 </div>
