change search path of products, departments, staffs, consultants, users

--- a/app/views/consultants/_search_form.html.erb
+++ b/app/views/consultants/_search_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@query_consultant_params,
-  url: search_consultants_path, as: :consultant,
+  url: query_consultants_path, as: :consultant,
   method: :post, wrapper: :vertical_form) do |f| %>
 
   <%= f.error_notification %>
