--- a/app/views/departments/_search_form.html.erb
+++ b/app/views/departments/_search_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@query_department_params,
-  url: search_departments_path, as: :department,
+  url: query_departments_path, as: :department,
   method: :post, wrapper: :vertical_form) do |f| %>
 
   <%= f.error_notification %>
