--- a/app/views/staffs/_search_form.html.erb
+++ b/app/views/staffs/_search_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@query_staff_params,
-  url: search_staffs_path, as: :staff,
+  url: query_staffs_path, as: :staff,
   method: :post, wrapper: :vertical_form) do |f| %>
 
   <%= f.error_notification %>
