--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@query_user_params,
-  url: search_users_path, as: :user,
+  url: query_users_path, as: :user,
   method: :post, wrapper: :vertical_form) do |f| %>
 
   <%= f.error_notification %>
