--- a/app/views/staffs/show.html.erb
+++ b/app/views/staffs/show.html.erb
@@ -30,14 +30,26 @@
             <div class="row">
                 <div class="col-lg-5">
                     <dl class="dl-horizontal">
-                        <dt>Field1: </dt>
-                        <dd>Value</dd>
+                        <dt><%= t('activerecord.attributes.staff.department_id')%>: </dt>
+                        <dd><%= @staff.department.name if @staff.department %></dd>
+                        <dt><%= t('activerecord.attributes.staff.office_tel')%>: </dt>
+                        <dd><%= @staff.office_tel %></dd>
+                        <% if @staff.is_investment_manager == true %>
+                        <dt><%= t('activerecord.attributes.staff.duration')%>: </dt>
+                        <dd><%= @staff.duration %></dd>
+                        <% end %>
                     </dl>
                 </div>
                 <div class="col-lg-7">
                     <dl class="dl-horizontal">
-                        <dt>Field2: </dt>
-                        <dd>Value</dd>
+                      <dt><%= t('activerecord.attributes.staff.position')%>: </dt>
+                      <dd><%= @staff.position %></dd>
+                      <dt><%= t('activerecord.attributes.staff.mobile')%>: </dt>
+                      <dd><%= @staff.mobile %></dd>
+                      <% if @staff.is_investment_manager == true %>
+                      <dt><%= t('activerecord.attributes.staff.certification_id')%>: </dt>
+                      <dd><%= @staff.certification_id %></dd>
+                      <% end %>
                     </dl>
                 </div>
             </div>
