refine buttons of products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -26,7 +26,7 @@
                 <div class="ibox-content">
                     <div class="table-responsive">
                         <%= render partial: 'products_grid' %>
-                        <%= link_to(fa_icon('file-excel-o', text: t('buttons.download_as_excel')), products_path(@query_params.merge(format: :xls)), class: 'btn btn-white') if @products_grid.count > 0 %>
+                        <%= link_to(fa_icon('file-excel-o', text: t('buttons.download_as_excel')), products_path(@query_params.merge(format: :xls)), class: 'btn btn-white') if false %>
                     </div>
                 </div>
             </div>
