--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,8 +19,8 @@
                 <div class="col-lg-12">
                     <div class="m-b-md">
                         <div class="pull-right">
-
-                            <%= link_to fa_icon('pencil', text: '编辑基本信息'), edit_product_path(@product), class: 'btn btn-white btn-sm' %>
+                            <%= link_to(fa_icon('pencil', text: '编辑基本信息'), edit_product_path(@product), class: 'btn btn-white btn-sm') %>
+                            <%= link_to(fa_icon("trash"), product_path(@product), class: 'btn btn-danger btn-sm', method: :delete, data: {toggle: 'tooltip', confirm: t('confirms.delete')}, title: t('buttons.delete')) %>
                         </div>
                         <h2><%= @product.name %></h2>
                     </div>
