--- a/app/views/products/_show_tab_summary.html.erb
+++ b/app/views/products/_show_tab_summary.html.erb
@@ -22,15 +22,37 @@
     </div>
     <div class="col-lg-7">
         <dl class="dl-horizontal">
-
             <dt><%= t('activerecord.attributes.product.category') %>:</dt>
-            <dd><%= @product.category %></dd>
+            <dd><%= Product.category_names[@product.category] %></dd>
             <dt><%= t('activerecord.attributes.product.rd_category') %>:</dt>
-            <dd> <%= @product.rd_category %></dd>
+            <dd><%= Product.rd_category_names[@product.rd_category] %></dd>
             <dt><%= t('activerecord.attributes.product.initial_fund') %>:</dt>
             <dd> <%= @product.initial_fund %></dd>
             <dt><%= t('activerecord.attributes.product.investment_scope') %>:</dt>
             <dd> <%= @product.investment_scope %></dd>
+        </dl>
+    </div>
+</div>
+
+<div class="hr-line-dashed"></div>
+
+<div class="row">
+    <div class="col-lg-5">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.is_structured') %>:</dt>
+            <dd> <%= @product.is_structured? ? "是" : "否" %></dd>
+            <dt><%= t('activerecord.attributes.product.is_one_to_many') %>:</dt>
+            <dd> <%= @product.is_one_to_many? ? "是" : "否" %></dd>
+        </dl>
+    </div>
+    <div class="col-lg-7">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.leverage') %>:</dt>
+            <dd> <%= @product.leverage %></dd>
+            <dt><%= t('activerecord.attributes.product.superior_code') %>:</dt>
+            <dd> <%= @product.superior_code %></dd>
+            <dt><%= t('activerecord.attributes.product.inferior_code') %>:</dt>
+            <dd> <%= @product.inferior_code %></dd>
         </dl>
     </div>
 </div>
