--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -9,6 +9,12 @@
   <%= f.input :delegation_started_at, required: false, as: :date_picker, label: "托管时间范围 #{t('labels.from')}" %>
   <%= f.input :delegation_ended_at, required: false, as: :date_picker, label: t('labels.to') %>
 
+  <div class="hr-line-dashed"></div>
+
+  <%= f.input :categories, required: false, collection: Product.categories, as: :check_boxes, wrapper: :vertical_radio_and_checkboxes %>
+
+  <div class="hr-line-dashed"></div>
+
   <div class="form-group">
       <%= link_to t('buttons.reset'), products_path, class: 'btn btn-white btn-sm' %>
       <%= f.submit t('buttons.search'), class: 'btn btn-primary btn-sm pull-right' %>
