complete tags for products

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require wice_grid
  *= require font-awesome
  *= require bootstrap-datetimepicker
+ *= require bootstrap-tagsinput/bootstrap-tagsinput
  *= require animate/animate
  *= require steps/jquery.steps
  *= require style
