add remarks to products

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -140,7 +140,7 @@
       <%= f.input :tag_names, input_html: { data: { role: 'tagsinput' } } %>
     </div>
     <div class="col-lg-6">
-
+        <%= f.input :remarks %>
     </div>
 </div>
 
