--- a/app/views/products/_show_tab_summary.html.erb
+++ b/app/views/products/_show_tab_summary.html.erb
@@ -202,3 +202,12 @@
         </dl>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <dl class="dl-horizontal">
+            <dt><%= t('activerecord.attributes.product.remarks') %>:</dt>
+            <dd><%= @product.remarks %></dd>
+        </dl>
+    </div>
+</div>
