--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -19,6 +19,10 @@
 
   <div class="hr-line-dashed"></div>
 
+  <%= f.input :remarks, required: false %>
+
+  <div class="hr-line-dashed"></div>
+
   <div class="form-group">
       <%= link_to t('buttons.reset'), products_path, class: 'btn btn-white btn-sm' %>
       <%= f.submit t('buttons.search'), class: 'btn btn-primary btn-sm pull-right' %>
